--- a/Problem_5.html
+++ b/Problem_5.html
@@ -10,9 +10,9 @@
 </body>
 <script>
 function replaceAll(str) {
-    return str.replace(" ",".");
-    // return str.split(" ").join(".");
+    // return str.replace(" ",".");
+    return str.split(" ").join(".");
 }
-console.log(replaceAll("Hello World"));
+console.log(replaceAll("The quick brown fox jumps over the lazy dog"));
 </script>
 </html>
